objects/Apttus_Approval_ApprovalRuleAssignee__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Approval_AssigneeDescription__c</fullName>
        <label>Assignee Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval_AssigneeId__c</fullName>
        <label>Assignee Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval_AssigneeLabel__c</fullName>
        <label>Assignee Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval_AssigneeType__c</fullName>
        <label>Assignee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Related User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval_AssigneeValue__c</fullName>
        <label>Assignee Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Created By</fullName>
                </value>
                <value>
                    <fullName>Group Manager</fullName>
                </value>
                <value>
                    <fullName>Last Modified By</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Primary Executive Sponsor</fullName>
                </value>
                <value>
                    <fullName>Regional Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Engineer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval_DependsOn__c</fullName>
        <label>DependsOn</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval_NotifyOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval_RuleEntryId__c</fullName>
        <label>Rule Entry Id</label>
        <referenceTo>Apttus_Approval_ApprovalRuleEntry__c</referenceTo>
        <relationshipLabel>Approval Rule Assignees</relationshipLabel>
        <relationshipName>Approval_Rule_Assignees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval_SendEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Approval Rule Assignee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rule Assignee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Rule Assignees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>